@@ -1,3 +1,8 @@
+2009-10-07  Daniel Kraft  <d@domob.eu>
+
+	PR fortran/41615
+	* gfortran.dg/assumed_charlen_function_6.f90: New test.
+
 2009-10-07  Janus Weil  <janus@gcc.gnu.org>
 
 	* gfortran.dg/same_type_as_2.f03: Modified (was illegal).
